--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=sobes_bot
-bot.names=sobes_shilov_bot
-bot.tokens =7539901127:AAHRMO9f_GCxBBj8Fjcr0RDtetfVbIAmEXY
+bot.name= ${BOT_NAME}
+bot.token = ${BOT_TOKEN}
 spring.datasource.url = ${DATABASE_URL}
 spring.datasource.username = ${DATABASE_USERNAME}
 spring.datasource.password = ${DATABASE_PASSWORD}
