--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.url = ${DATABASE_URL}
 spring.datasource.username = ${DATABASE_USERNAME}
 spring.datasource.password = ${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.auto-commit=false
 spring.jpa.hibernate.ddl-auto=update
